# pandora-dev-test

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
pandora/: config.py  forms.py  models.py  services.py  utils.py  views.py
static/js/: set_interval.js
templates/: base.html  index.html
templates/components/: device_card.html  device_warning.html
